deploy/api-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/cprime-labs/cqa-demo/fibonacci-calculator:latest
          ports:
            - containerPort: 8080
