deploy/web-ui-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-ui
  template:
    metadata:
      labels:
        app: web-ui
    spec:
      containers:
        - name: web-ui
          image: ghcr.io/cprime-labs/cqa-demo/web-ui:latest
          ports:
            - containerPort: 4200
