deploy/fibonacci-calculator-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-calculator
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    app: fibonacci-calculator
