deploy/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cqa-demo
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    app: cqa-demo
