deploy/web-ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-ui
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 4200
  selector:
    app: web-ui
